--- a/views/fragments/header.ejs
+++ b/views/fragments/header.ejs
@@ -13,7 +13,7 @@
                         <a href="/"><button class="navButton">Home</button></a>
                     </li>
                     <li class="navButtonListContainer">
-                       <a href="/Students"><button class="navButton">Students</button></a>
+                       <a href="/students"><button class="navButton">Students</button></a>
                     </li>
                     <li class="navButtonListContainer">
                         <a href="/grades"><button class="navButton">Grades</button></a>
