--- a/views/Subject View/SubjectDetails.ejs
+++ b/views/Subject View/SubjectDetails.ejs
@@ -19,20 +19,28 @@
 
         <div class="subjectListContainer" style="width: auto; height: auto; max-height: 100vh; margin-left: 25vh; padding: 3vh; display: flex">
             <div class="subjectListMerger" style="width: 100%; height: auto; display: flex">
-                <form class="LoginForm" style="float: left; margin: 5vh; width: 35%; top: 0; padding: 5vh; height: auto; overflow: inherit; border: 1px solid grey; border-radius: 25px">
-                    <label id="id" class="LoginLabel" style="color: black">ID: </label> <p/> <label id="idValue" class="LoginLabel" style="color: black; margin-left: 3vh">1</label>
-                    <p></p>
-                    <label id="name" class="LoginLabel" style="color: black">NAME: </label> <p/> <label id="nameValue" class="LoginLabel" style="color: black; margin-left: 3vh">English</label>
-                    <p></p>
-                    <label id="shortName" class="LoginLabel" style="color: black">SHORT NAME: </label> <p/> <label id="shortNameValue" class="LoginLabel" style="color: black; margin-left: 3vh">ENG</label>
-                    <p></p>
-                    <label id="price" class="LoginLabel" style="color: black">PRICE: </label> <p/> <label id="priceValue" class="LoginLabel" style="color: black; margin-left: 3vh">60 PLN/h</label>
-                    <p></p>
-                    <label id="availibility" class="LoginLabel" style="color: black">AVAILIBILITY: </label> <p/> <label id="availibilityValue" class="LoginLabel" style="color: black; margin-left: 3vh">Available</label>
-                    <p></p>
-                    <label id="lecturer" class="LoginLabel" style="color: black">LECTURER</label> <p/> <label id="lecturerValue" class="LoginLabel" style="color: black; margin-left: 3vh">Anna Angielska</label>
-                    <p></p>
-                </form>
+               <% if (formMode === 'showDetails' || formMode === 'edit') {%>
+                <table class="gradesTable">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>ShortName</th>
+                        <th>Price</th>
+                        <th>Opened</th>
+                        <th>Lecturer</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><%= subject.Name%></td>
+                        <td><%= subject.ShortName%></td>
+                        <td><%= subject.Price%></td>
+                        <td><%= subject.Opened%></td>
+                        <td><%= subject.Lecturer%></td>
+                    </tr>
+                    </tbody>
+                </table>
+
                 <div class="gradesTable" style="border: 1px solid grey; border-radius: 25px; width: 100%; margin: 15vh; height: 50%; overflow-y: scroll; overflow-x: hidden">
                     <p style="color: black; text-align: center">Last Grades</p>
                     <table class="gradesTable">
@@ -46,79 +54,21 @@
                         </tr>
                         </thead>
                         <tbody>
+                        <% for(let grd of subject.grades) {%>
                         <tr>
                             <td>
                                 <square class="sqaure" style="background-color: red">1</square>
                             </td>
-                            <td>01-01-2021</td>
-                            <td>Kolokwium 1</td>
-                            <td>Jan Nowak</td>
-                            <td>123456789011</td>
+                            <td><%= grd.Date%></td>
+                            <td><%= grd.Comment%>></td>
+                            <td><a href="/grades/details/<%= grd.grades._id%>"><%= grd.student.Surname%></a></td>
+                            <td><a href="/grades/details/<%= grd.grades._id%>"><%= grd.student.PESEL%></a></td>
                         </tr>
+                        <%}%>
                         </tbody>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <square class="sqaure" style="background-color: yellow">4</square>
-                            </td>
-                            <td>04-04-2021</td>
-                            <td>Kolokwium 2</td>
-                            <td>Jan Kowalski</td>
-                            <td>123456789011</td>
-                        </tr>
-                        </tbody>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <square class="sqaure" style="background-color: greenyellow">5</square>
-                            </td>
-                            <td>05-05-2021</td>
-                            <td>Egzamin 1</td>
-                            <td>Andrzej Abacki</td>
-                            <td>123456789011</td>
-                        </tr>
-                        </tbody>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <square class="sqaure" style="background-color: red">2</square>
-                            </td>
-                            <td>05-05-2021</td>
-                            <td>Kolokwium 1</td>
-                            <td>Helene Babacka</td>
-                            <td>123456789011</td>
-                        </tr>
-                        </tbody>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <square class="sqaure" style="background-color: yellow">3</square>
-                            </td>
-                            <td>04-04-2021</td>
-                            <td>Kolokwium 2</td>
-                            <td>Anna Gold</td>
-                            <td>123456789011</td>
-                        </tr>
-                        </tbody>
-                        <tbody>
-                        <td>
-                            <square class="sqaure" style="background-color: greenyellow">6</square>
-                        </td>
-                        <td>06-06-2021</td>
-                        <td>Egzamin 1</td>
-                        <td>Anna Silver</td>
-                        <td>123456789011</td>
-                        </tbody>
-                        <tbody>
-                        <td>
-                            <square class="sqaure" style="background-color: red">1</square>
-                        </td>
-                        <td>01-01-2021</td>
-                        <td>Egzamin 2</td>
-                        <td>Anna Platinum</td>
-                        <td>123456789011</td>
-                        </tbody>
+
                     </table>
+                    <%}%>
                 </div>
             </div>
         </div>
