Walidacja po stronie serwera sequelize

--- a/views/Grades/GradesList.ejs
+++ b/views/Grades/GradesList.ejs
@@ -48,7 +48,7 @@
                                 <a href="/grades/edit/<%=grade._id%>"><button class="loginButton" style="margin-bottom: 5px">Edit</button> </a>
                             </li>
                             <li>
-                                <button class="loginButton" style="margin-bottom: 5px">Delete</button>
+                                <a href="/grades/delete/<%= grade._id%>"><button class="loginButton" style="margin-bottom: 5px">Delete</button> </a>
                             </li>
                             <li>
                                 <a href="/grades/details/<%= grade._id%>"><button class="loginButton" style="margin-bottom: 5px">Details</button> </a>
